// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`AbapServiceProvider fetchValueListReferenceServices should log if metadata loading fails 1`] = `
Array [
  Object {
    "metadata": "metadata",
    "path": "/sap/opu/odata/srv_f4/two",
    "target": "target",
    "type": "value-list",
  },
]
`;

exports[`AbapServiceProvider fetchValueListReferenceServices should not crash if promise rejects 1`] = `
Array [
  Object {
    "metadata": "metadata",
    "path": "/sap/opu/odata/srv_f4/two",
    "target": "target",
    "type": "value-list",
  },
]
`;

exports[`AbapServiceProvider fetchValueListReferenceServices should return code list data 1`] = `
Array [
  Object {
    "metadata": "metadata",
    "path": "/sap/opu/odata/srv_f4",
    "type": "code-list",
  },
]
`;

exports[`AbapServiceProvider fetchValueListReferenceServices should return value list data 1`] = `
Array [
  Object {
    "metadata": "metadata",
    "path": "/sap/opu/odata/srv_f4",
    "target": "target",
    "type": "value-list",
  },
]
`;

exports[`AbapServiceProvider getter/setter AtoInfo - Invalid XML response 1`] = `
Object {
  "baseURL": "https://server.example",
  "headers": Object {
    "common": Object {
      "Cookie": "",
    },
    "delete": Object {},
    "get": Object {},
    "head": Object {},
    "patch": Object {},
    "post": Object {},
    "put": Object {},
  },
  "httpsAgent": Agent {
    "_events": Object {
      "free": [Function],
      "newListener": [Function],
    },
    "_eventsCount": 2,
    "_maxListeners": undefined,
    "_sessionCache": Object {
      "list": Array [],
      "map": Object {},
    },
    "defaultPort": 443,
    "freeSockets": Object {},
    "keepAlive": false,
    "keepAliveMsecs": 1000,
    "maxCachedSessions": 100,
    "maxFreeSockets": 256,
    "maxSockets": Infinity,
    "maxTotalSockets": Infinity,
    "options": Object {
      "noDelay": true,
      "path": null,
      "rejectUnauthorized": true,
    },
    "protocol": "https:",
    "requests": Object {},
    "scheduling": "lifo",
    "sockets": Object {},
    "totalSocketCount": 0,
    Symbol(shapeMode): false,
    Symbol(kCapture): false,
  },
  "validateStatus": [Function],
  "withCredentials": true,
}
`;

exports[`AbapServiceProvider getter/setter AtoInfo 1`] = `
Object {
  "auth": Object {
    "password": "SECRET",
    "username": "USER",
  },
  "baseURL": "https://server.example",
  "headers": Object {
    "common": Object {},
    "delete": Object {},
    "get": Object {},
    "head": Object {},
    "patch": Object {},
    "post": Object {},
    "put": Object {},
  },
  "httpsAgent": Agent {
    "_events": Object {
      "free": [Function],
      "newListener": [Function],
    },
    "_eventsCount": 2,
    "_maxListeners": undefined,
    "_sessionCache": Object {
      "list": Array [],
      "map": Object {},
    },
    "defaultPort": 443,
    "freeSockets": Object {},
    "keepAlive": false,
    "keepAliveMsecs": 1000,
    "maxCachedSessions": 100,
    "maxFreeSockets": 256,
    "maxSockets": Infinity,
    "maxTotalSockets": Infinity,
    "options": Object {
      "noDelay": true,
      "path": null,
      "rejectUnauthorized": true,
    },
    "protocol": "https:",
    "requests": Object {},
    "scheduling": "lifo",
    "sockets": Object {},
    "totalSocketCount": 0,
    Symbol(shapeMode): false,
    Symbol(kCapture): false,
  },
  "validateStatus": [Function],
  "withCredentials": true,
}
`;
